// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildMonacoTheme > should build a Monaco theme from the Active4D palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#ffffff",
    "editor.foreground": "#3b3b3b",
    "editor.lineHighlightBackground": "#f0f0f0",
    "editor.selectionBackground": "#bad6fd",
    "editorCursor.foreground": "#3b3b3b",
    "editorIndentGuide.activeBackground": "#bad6fd",
    "editorIndentGuide.background": "#f0f0f0",
    "editorLineNumber.activeForeground": "#3b3b3b",
    "editorLineNumber.foreground": "#af82d4",
    "editorWhitespace.foreground": "#af82d4",
    "scrollbar.shadow": "#ffffff",
    "scrollbarSlider.activeBackground": "#af82d4",
    "scrollbarSlider.background": "#bad6fd",
    "scrollbarSlider.hoverBackground": "#af82d4",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "3b3b3b",
      "token": "",
    },
    {
      "foreground": "af82d4",
      "token": "comment",
    },
    {
      "foreground": "666666",
      "token": "string",
    },
    {
      "foreground": "a8017e",
      "token": "number",
    },
    {
      "foreground": "a8017e",
      "token": "constant",
    },
    {
      "foreground": "006699",
      "token": "keyword",
    },
    {
      "foreground": "3b3b3b",
      "token": "operator",
    },
    {
      "foreground": "3b3b3b",
      "token": "delimiter",
    },
    {
      "foreground": "3b3b3b",
      "token": "identifier",
    },
    {
      "foreground": "21439c",
      "token": "type",
    },
    {
      "foreground": "21439c",
      "token": "predefined",
    },
    {
      "foreground": "21439c",
      "token": "function",
    },
    {
      "foreground": "0053ff",
      "token": "variable",
    },
    {
      "foreground": "016cff",
      "token": "invalid",
    },
    {
      "foreground": "666666",
      "token": "string.sql",
    },
    {
      "foreground": "21439c",
      "token": "predefined.sql",
    },
    {
      "foreground": "006699",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "3b3b3b",
      "token": "identifier.sql",
    },
    {
      "foreground": "21439c",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "a535ae",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Catppuccin Latte palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#eff1f5",
    "editor.foreground": "#4c4f69",
    "editor.lineHighlightBackground": "#e6e9ef",
    "editor.selectionBackground": "#ccd0da",
    "editorCursor.foreground": "#4c4f69",
    "editorIndentGuide.activeBackground": "#ccd0da",
    "editorIndentGuide.background": "#e6e9ef",
    "editorLineNumber.activeForeground": "#4c4f69",
    "editorLineNumber.foreground": "#bcc0cc",
    "editorWhitespace.foreground": "#bcc0cc",
    "scrollbar.shadow": "#eff1f5",
    "scrollbarSlider.activeBackground": "#bcc0cc",
    "scrollbarSlider.background": "#ccd0da",
    "scrollbarSlider.hoverBackground": "#bcc0cc",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "4c4f69",
      "token": "",
    },
    {
      "foreground": "bcc0cc",
      "token": "comment",
    },
    {
      "foreground": "40a02b",
      "token": "string",
    },
    {
      "foreground": "fe640b",
      "token": "number",
    },
    {
      "foreground": "fe640b",
      "token": "constant",
    },
    {
      "foreground": "8839ef",
      "token": "keyword",
    },
    {
      "foreground": "4c4f69",
      "token": "operator",
    },
    {
      "foreground": "4c4f69",
      "token": "delimiter",
    },
    {
      "foreground": "4c4f69",
      "token": "identifier",
    },
    {
      "foreground": "df8e1d",
      "token": "type",
    },
    {
      "foreground": "1e66f5",
      "token": "predefined",
    },
    {
      "foreground": "1e66f5",
      "token": "function",
    },
    {
      "foreground": "d20f39",
      "token": "variable",
    },
    {
      "foreground": "dd7878",
      "token": "invalid",
    },
    {
      "foreground": "40a02b",
      "token": "string.sql",
    },
    {
      "foreground": "1e66f5",
      "token": "predefined.sql",
    },
    {
      "foreground": "8839ef",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "4c4f69",
      "token": "identifier.sql",
    },
    {
      "foreground": "df8e1d",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "179299",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Catppuccin Mocha palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#1e1e2e",
    "editor.foreground": "#cdd6f4",
    "editor.lineHighlightBackground": "#181825",
    "editor.selectionBackground": "#313244",
    "editorCursor.foreground": "#cdd6f4",
    "editorIndentGuide.activeBackground": "#313244",
    "editorIndentGuide.background": "#181825",
    "editorLineNumber.activeForeground": "#cdd6f4",
    "editorLineNumber.foreground": "#45475a",
    "editorWhitespace.foreground": "#45475a",
    "scrollbar.shadow": "#1e1e2e",
    "scrollbarSlider.activeBackground": "#45475a",
    "scrollbarSlider.background": "#313244",
    "scrollbarSlider.hoverBackground": "#45475a",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "cdd6f4",
      "token": "",
    },
    {
      "foreground": "45475a",
      "token": "comment",
    },
    {
      "foreground": "a6e3a1",
      "token": "string",
    },
    {
      "foreground": "fab387",
      "token": "number",
    },
    {
      "foreground": "fab387",
      "token": "constant",
    },
    {
      "foreground": "cba6f7",
      "token": "keyword",
    },
    {
      "foreground": "cdd6f4",
      "token": "operator",
    },
    {
      "foreground": "cdd6f4",
      "token": "delimiter",
    },
    {
      "foreground": "cdd6f4",
      "token": "identifier",
    },
    {
      "foreground": "f9e2af",
      "token": "type",
    },
    {
      "foreground": "89b4fa",
      "token": "predefined",
    },
    {
      "foreground": "89b4fa",
      "token": "function",
    },
    {
      "foreground": "f38ba8",
      "token": "variable",
    },
    {
      "foreground": "f2cdcd",
      "token": "invalid",
    },
    {
      "foreground": "a6e3a1",
      "token": "string.sql",
    },
    {
      "foreground": "89b4fa",
      "token": "predefined.sql",
    },
    {
      "foreground": "cba6f7",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "cdd6f4",
      "token": "identifier.sql",
    },
    {
      "foreground": "f9e2af",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "94e2d5",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Dracula palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#282a36",
    "editor.foreground": "#f8f8f2",
    "editor.lineHighlightBackground": "#21222c",
    "editor.selectionBackground": "#44475a",
    "editorCursor.foreground": "#f8f8f2",
    "editorIndentGuide.activeBackground": "#44475a",
    "editorIndentGuide.background": "#21222c",
    "editorLineNumber.activeForeground": "#f8f8f2",
    "editorLineNumber.foreground": "#6272a4",
    "editorWhitespace.foreground": "#6272a4",
    "scrollbar.shadow": "#282a36",
    "scrollbarSlider.activeBackground": "#6272a4",
    "scrollbarSlider.background": "#44475a",
    "scrollbarSlider.hoverBackground": "#6272a4",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "f8f8f2",
      "token": "",
    },
    {
      "foreground": "6272a4",
      "token": "comment",
    },
    {
      "foreground": "f1fa8c",
      "token": "string",
    },
    {
      "foreground": "bd93f9",
      "token": "number",
    },
    {
      "foreground": "bd93f9",
      "token": "constant",
    },
    {
      "foreground": "ff79c6",
      "token": "keyword",
    },
    {
      "foreground": "f8f8f2",
      "token": "operator",
    },
    {
      "foreground": "f8f8f2",
      "token": "delimiter",
    },
    {
      "foreground": "f8f8f2",
      "token": "identifier",
    },
    {
      "foreground": "8be9fd",
      "token": "type",
    },
    {
      "foreground": "50fa7b",
      "token": "predefined",
    },
    {
      "foreground": "50fa7b",
      "token": "function",
    },
    {
      "foreground": "ff5555",
      "token": "variable",
    },
    {
      "foreground": "ffb86c",
      "token": "invalid",
    },
    {
      "foreground": "f1fa8c",
      "token": "string.sql",
    },
    {
      "foreground": "50fa7b",
      "token": "predefined.sql",
    },
    {
      "foreground": "ff79c6",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "f8f8f2",
      "token": "identifier.sql",
    },
    {
      "foreground": "8be9fd",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "8be9fd",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Eva palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#2a3b4d",
    "editor.foreground": "#9fa2a6",
    "editor.lineHighlightBackground": "#3d566f",
    "editor.selectionBackground": "#4b6988",
    "editorCursor.foreground": "#9fa2a6",
    "editorIndentGuide.activeBackground": "#4b6988",
    "editorIndentGuide.background": "#3d566f",
    "editorLineNumber.activeForeground": "#9fa2a6",
    "editorLineNumber.foreground": "#55799c",
    "editorWhitespace.foreground": "#55799c",
    "scrollbar.shadow": "#2a3b4d",
    "scrollbarSlider.activeBackground": "#55799c",
    "scrollbarSlider.background": "#4b6988",
    "scrollbarSlider.hoverBackground": "#55799c",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "9fa2a6",
      "token": "",
    },
    {
      "foreground": "55799c",
      "token": "comment",
    },
    {
      "foreground": "66ff66",
      "token": "string",
    },
    {
      "foreground": "ff9966",
      "token": "number",
    },
    {
      "foreground": "ff9966",
      "token": "constant",
    },
    {
      "foreground": "9c6cd3",
      "token": "keyword",
    },
    {
      "foreground": "9fa2a6",
      "token": "operator",
    },
    {
      "foreground": "9fa2a6",
      "token": "delimiter",
    },
    {
      "foreground": "9fa2a6",
      "token": "identifier",
    },
    {
      "foreground": "ffff66",
      "token": "type",
    },
    {
      "foreground": "15f4ee",
      "token": "predefined",
    },
    {
      "foreground": "15f4ee",
      "token": "function",
    },
    {
      "foreground": "c4676c",
      "token": "variable",
    },
    {
      "foreground": "bb64a9",
      "token": "invalid",
    },
    {
      "foreground": "66ff66",
      "token": "string.sql",
    },
    {
      "foreground": "15f4ee",
      "token": "predefined.sql",
    },
    {
      "foreground": "9c6cd3",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "9fa2a6",
      "token": "identifier.sql",
    },
    {
      "foreground": "ffff66",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "4b8f77",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the GitHub Dark palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#0d1117",
    "editor.foreground": "#c9d1d9",
    "editor.lineHighlightBackground": "#161b22",
    "editor.selectionBackground": "#484f58",
    "editorCursor.foreground": "#c9d1d9",
    "editorIndentGuide.activeBackground": "#484f58",
    "editorIndentGuide.background": "#161b22",
    "editorLineNumber.activeForeground": "#c9d1d9",
    "editorLineNumber.foreground": "#6e7681",
    "editorWhitespace.foreground": "#6e7681",
    "scrollbar.shadow": "#0d1117",
    "scrollbarSlider.activeBackground": "#6e7681",
    "scrollbarSlider.background": "#484f58",
    "scrollbarSlider.hoverBackground": "#6e7681",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "c9d1d9",
      "token": "",
    },
    {
      "foreground": "6e7681",
      "token": "comment",
    },
    {
      "foreground": "a5d6ff",
      "token": "string",
    },
    {
      "foreground": "79c0ff",
      "token": "number",
    },
    {
      "foreground": "79c0ff",
      "token": "constant",
    },
    {
      "foreground": "ff7b72",
      "token": "keyword",
    },
    {
      "foreground": "c9d1d9",
      "token": "operator",
    },
    {
      "foreground": "c9d1d9",
      "token": "delimiter",
    },
    {
      "foreground": "c9d1d9",
      "token": "identifier",
    },
    {
      "foreground": "bb8009",
      "token": "type",
    },
    {
      "foreground": "d2a8ff",
      "token": "predefined",
    },
    {
      "foreground": "d2a8ff",
      "token": "function",
    },
    {
      "foreground": "ffa657",
      "token": "variable",
    },
    {
      "foreground": "ffa198",
      "token": "invalid",
    },
    {
      "foreground": "a5d6ff",
      "token": "string.sql",
    },
    {
      "foreground": "d2a8ff",
      "token": "predefined.sql",
    },
    {
      "foreground": "ff7b72",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "c9d1d9",
      "token": "identifier.sql",
    },
    {
      "foreground": "bb8009",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "7ee787",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the GitHub Light palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#ffffff",
    "editor.foreground": "#424a53",
    "editor.lineHighlightBackground": "#f6f8fa",
    "editor.selectionBackground": "#afb8c1",
    "editorCursor.foreground": "#424a53",
    "editorIndentGuide.activeBackground": "#afb8c1",
    "editorIndentGuide.background": "#f6f8fa",
    "editorLineNumber.activeForeground": "#424a53",
    "editorLineNumber.foreground": "#8c959f",
    "editorWhitespace.foreground": "#8c959f",
    "scrollbar.shadow": "#ffffff",
    "scrollbarSlider.activeBackground": "#8c959f",
    "scrollbarSlider.background": "#afb8c1",
    "scrollbarSlider.hoverBackground": "#8c959f",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "424a53",
      "token": "",
    },
    {
      "foreground": "8c959f",
      "token": "comment",
    },
    {
      "foreground": "0a3069",
      "token": "string",
    },
    {
      "foreground": "0550ae",
      "token": "number",
    },
    {
      "foreground": "0550ae",
      "token": "constant",
    },
    {
      "foreground": "cf222e",
      "token": "keyword",
    },
    {
      "foreground": "424a53",
      "token": "operator",
    },
    {
      "foreground": "424a53",
      "token": "delimiter",
    },
    {
      "foreground": "424a53",
      "token": "identifier",
    },
    {
      "foreground": "bf8700",
      "token": "type",
    },
    {
      "foreground": "8250df",
      "token": "predefined",
    },
    {
      "foreground": "8250df",
      "token": "function",
    },
    {
      "foreground": "953800",
      "token": "variable",
    },
    {
      "foreground": "82071e",
      "token": "invalid",
    },
    {
      "foreground": "0a3069",
      "token": "string.sql",
    },
    {
      "foreground": "8250df",
      "token": "predefined.sql",
    },
    {
      "foreground": "cf222e",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "424a53",
      "token": "identifier.sql",
    },
    {
      "foreground": "bf8700",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "116329",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Gruvbox Dark palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#282828",
    "editor.foreground": "#d5c4a1",
    "editor.lineHighlightBackground": "#3c3836",
    "editor.selectionBackground": "#504945",
    "editorCursor.foreground": "#d5c4a1",
    "editorIndentGuide.activeBackground": "#504945",
    "editorIndentGuide.background": "#3c3836",
    "editorLineNumber.activeForeground": "#d5c4a1",
    "editorLineNumber.foreground": "#665c54",
    "editorWhitespace.foreground": "#665c54",
    "scrollbar.shadow": "#282828",
    "scrollbarSlider.activeBackground": "#665c54",
    "scrollbarSlider.background": "#504945",
    "scrollbarSlider.hoverBackground": "#665c54",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "d5c4a1",
      "token": "",
    },
    {
      "foreground": "665c54",
      "token": "comment",
    },
    {
      "foreground": "b8bb26",
      "token": "string",
    },
    {
      "foreground": "fe8019",
      "token": "number",
    },
    {
      "foreground": "fe8019",
      "token": "constant",
    },
    {
      "foreground": "d3869b",
      "token": "keyword",
    },
    {
      "foreground": "d5c4a1",
      "token": "operator",
    },
    {
      "foreground": "d5c4a1",
      "token": "delimiter",
    },
    {
      "foreground": "d5c4a1",
      "token": "identifier",
    },
    {
      "foreground": "fabd2f",
      "token": "type",
    },
    {
      "foreground": "83a598",
      "token": "predefined",
    },
    {
      "foreground": "83a598",
      "token": "function",
    },
    {
      "foreground": "fb4934",
      "token": "variable",
    },
    {
      "foreground": "d65d0e",
      "token": "invalid",
    },
    {
      "foreground": "b8bb26",
      "token": "string.sql",
    },
    {
      "foreground": "83a598",
      "token": "predefined.sql",
    },
    {
      "foreground": "d3869b",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "d5c4a1",
      "token": "identifier.sql",
    },
    {
      "foreground": "fabd2f",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "8ec07c",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Gruvbox Light palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#fbf1c7",
    "editor.foreground": "#504945",
    "editor.lineHighlightBackground": "#ebdbb2",
    "editor.selectionBackground": "#d5c4a1",
    "editorCursor.foreground": "#504945",
    "editorIndentGuide.activeBackground": "#d5c4a1",
    "editorIndentGuide.background": "#ebdbb2",
    "editorLineNumber.activeForeground": "#504945",
    "editorLineNumber.foreground": "#bdae93",
    "editorWhitespace.foreground": "#bdae93",
    "scrollbar.shadow": "#fbf1c7",
    "scrollbarSlider.activeBackground": "#bdae93",
    "scrollbarSlider.background": "#d5c4a1",
    "scrollbarSlider.hoverBackground": "#bdae93",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "504945",
      "token": "",
    },
    {
      "foreground": "bdae93",
      "token": "comment",
    },
    {
      "foreground": "79740e",
      "token": "string",
    },
    {
      "foreground": "af3a03",
      "token": "number",
    },
    {
      "foreground": "af3a03",
      "token": "constant",
    },
    {
      "foreground": "8f3f71",
      "token": "keyword",
    },
    {
      "foreground": "504945",
      "token": "operator",
    },
    {
      "foreground": "504945",
      "token": "delimiter",
    },
    {
      "foreground": "504945",
      "token": "identifier",
    },
    {
      "foreground": "b57614",
      "token": "type",
    },
    {
      "foreground": "076678",
      "token": "predefined",
    },
    {
      "foreground": "076678",
      "token": "function",
    },
    {
      "foreground": "9d0006",
      "token": "variable",
    },
    {
      "foreground": "d65d0e",
      "token": "invalid",
    },
    {
      "foreground": "79740e",
      "token": "string.sql",
    },
    {
      "foreground": "076678",
      "token": "predefined.sql",
    },
    {
      "foreground": "8f3f71",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "504945",
      "token": "identifier.sql",
    },
    {
      "foreground": "b57614",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "427b58",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Monokai palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#272822",
    "editor.foreground": "#f8f8f2",
    "editor.lineHighlightBackground": "#383830",
    "editor.selectionBackground": "#49483e",
    "editorCursor.foreground": "#f8f8f2",
    "editorIndentGuide.activeBackground": "#49483e",
    "editorIndentGuide.background": "#383830",
    "editorLineNumber.activeForeground": "#f8f8f2",
    "editorLineNumber.foreground": "#75715e",
    "editorWhitespace.foreground": "#75715e",
    "scrollbar.shadow": "#272822",
    "scrollbarSlider.activeBackground": "#75715e",
    "scrollbarSlider.background": "#49483e",
    "scrollbarSlider.hoverBackground": "#75715e",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "f8f8f2",
      "token": "",
    },
    {
      "foreground": "75715e",
      "token": "comment",
    },
    {
      "foreground": "a6e22e",
      "token": "string",
    },
    {
      "foreground": "fd971f",
      "token": "number",
    },
    {
      "foreground": "fd971f",
      "token": "constant",
    },
    {
      "foreground": "ae81ff",
      "token": "keyword",
    },
    {
      "foreground": "f8f8f2",
      "token": "operator",
    },
    {
      "foreground": "f8f8f2",
      "token": "delimiter",
    },
    {
      "foreground": "f8f8f2",
      "token": "identifier",
    },
    {
      "foreground": "f4bf75",
      "token": "type",
    },
    {
      "foreground": "66d9ef",
      "token": "predefined",
    },
    {
      "foreground": "66d9ef",
      "token": "function",
    },
    {
      "foreground": "f92672",
      "token": "variable",
    },
    {
      "foreground": "cc6633",
      "token": "invalid",
    },
    {
      "foreground": "a6e22e",
      "token": "string.sql",
    },
    {
      "foreground": "66d9ef",
      "token": "predefined.sql",
    },
    {
      "foreground": "ae81ff",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "f8f8f2",
      "token": "identifier.sql",
    },
    {
      "foreground": "f4bf75",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "a1efe4",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Night Owl palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#011627",
    "editor.foreground": "#d6deeb",
    "editor.lineHighlightBackground": "#0b2942",
    "editor.selectionBackground": "#1d3b53",
    "editorCursor.foreground": "#d6deeb",
    "editorIndentGuide.activeBackground": "#1d3b53",
    "editorIndentGuide.background": "#0b2942",
    "editorLineNumber.activeForeground": "#d6deeb",
    "editorLineNumber.foreground": "#637777",
    "editorWhitespace.foreground": "#637777",
    "scrollbar.shadow": "#011627",
    "scrollbarSlider.activeBackground": "#637777",
    "scrollbarSlider.background": "#1d3b53",
    "scrollbarSlider.hoverBackground": "#637777",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "d6deeb",
      "token": "",
    },
    {
      "foreground": "637777",
      "token": "comment",
    },
    {
      "foreground": "ecc48d",
      "token": "string",
    },
    {
      "foreground": "f78c6c",
      "token": "number",
    },
    {
      "foreground": "f78c6c",
      "token": "constant",
    },
    {
      "foreground": "c792ea",
      "token": "keyword",
    },
    {
      "foreground": "d6deeb",
      "token": "operator",
    },
    {
      "foreground": "d6deeb",
      "token": "delimiter",
    },
    {
      "foreground": "d6deeb",
      "token": "identifier",
    },
    {
      "foreground": "ffcb8b",
      "token": "type",
    },
    {
      "foreground": "82aaff",
      "token": "predefined",
    },
    {
      "foreground": "82aaff",
      "token": "function",
    },
    {
      "foreground": "addb67",
      "token": "variable",
    },
    {
      "foreground": "ef5350",
      "token": "invalid",
    },
    {
      "foreground": "ecc48d",
      "token": "string.sql",
    },
    {
      "foreground": "82aaff",
      "token": "predefined.sql",
    },
    {
      "foreground": "c792ea",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "d6deeb",
      "token": "identifier.sql",
    },
    {
      "foreground": "ffcb8b",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "7fdbca",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Nord palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#2e3440",
    "editor.foreground": "#e5e9f0",
    "editor.lineHighlightBackground": "#3b4252",
    "editor.selectionBackground": "#434c5e",
    "editorCursor.foreground": "#e5e9f0",
    "editorIndentGuide.activeBackground": "#434c5e",
    "editorIndentGuide.background": "#3b4252",
    "editorLineNumber.activeForeground": "#e5e9f0",
    "editorLineNumber.foreground": "#4c566a",
    "editorWhitespace.foreground": "#4c566a",
    "scrollbar.shadow": "#2e3440",
    "scrollbarSlider.activeBackground": "#4c566a",
    "scrollbarSlider.background": "#434c5e",
    "scrollbarSlider.hoverBackground": "#4c566a",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "e5e9f0",
      "token": "",
    },
    {
      "foreground": "4c566a",
      "token": "comment",
    },
    {
      "foreground": "a3be8c",
      "token": "string",
    },
    {
      "foreground": "d08770",
      "token": "number",
    },
    {
      "foreground": "d08770",
      "token": "constant",
    },
    {
      "foreground": "b48ead",
      "token": "keyword",
    },
    {
      "foreground": "e5e9f0",
      "token": "operator",
    },
    {
      "foreground": "e5e9f0",
      "token": "delimiter",
    },
    {
      "foreground": "e5e9f0",
      "token": "identifier",
    },
    {
      "foreground": "ebcb8b",
      "token": "type",
    },
    {
      "foreground": "81a1c1",
      "token": "predefined",
    },
    {
      "foreground": "81a1c1",
      "token": "function",
    },
    {
      "foreground": "bf616a",
      "token": "variable",
    },
    {
      "foreground": "5e81ac",
      "token": "invalid",
    },
    {
      "foreground": "a3be8c",
      "token": "string.sql",
    },
    {
      "foreground": "81a1c1",
      "token": "predefined.sql",
    },
    {
      "foreground": "b48ead",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "e5e9f0",
      "token": "identifier.sql",
    },
    {
      "foreground": "ebcb8b",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "88c0d0",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the One Light palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#fafafa",
    "editor.foreground": "#383a42",
    "editor.lineHighlightBackground": "#f0f0f1",
    "editor.selectionBackground": "#e5e5e6",
    "editorCursor.foreground": "#383a42",
    "editorIndentGuide.activeBackground": "#e5e5e6",
    "editorIndentGuide.background": "#f0f0f1",
    "editorLineNumber.activeForeground": "#383a42",
    "editorLineNumber.foreground": "#a0a1a7",
    "editorWhitespace.foreground": "#a0a1a7",
    "scrollbar.shadow": "#fafafa",
    "scrollbarSlider.activeBackground": "#a0a1a7",
    "scrollbarSlider.background": "#e5e5e6",
    "scrollbarSlider.hoverBackground": "#a0a1a7",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "383a42",
      "token": "",
    },
    {
      "foreground": "a0a1a7",
      "token": "comment",
    },
    {
      "foreground": "50a14f",
      "token": "string",
    },
    {
      "foreground": "d75f00",
      "token": "number",
    },
    {
      "foreground": "d75f00",
      "token": "constant",
    },
    {
      "foreground": "a626a4",
      "token": "keyword",
    },
    {
      "foreground": "383a42",
      "token": "operator",
    },
    {
      "foreground": "383a42",
      "token": "delimiter",
    },
    {
      "foreground": "383a42",
      "token": "identifier",
    },
    {
      "foreground": "c18401",
      "token": "type",
    },
    {
      "foreground": "4078f2",
      "token": "predefined",
    },
    {
      "foreground": "4078f2",
      "token": "function",
    },
    {
      "foreground": "ca1243",
      "token": "variable",
    },
    {
      "foreground": "986801",
      "token": "invalid",
    },
    {
      "foreground": "50a14f",
      "token": "string.sql",
    },
    {
      "foreground": "4078f2",
      "token": "predefined.sql",
    },
    {
      "foreground": "a626a4",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "383a42",
      "token": "identifier.sql",
    },
    {
      "foreground": "c18401",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "0184bc",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the OneDark palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#282c34",
    "editor.foreground": "#abb2bf",
    "editor.lineHighlightBackground": "#353b45",
    "editor.selectionBackground": "#3e4451",
    "editorCursor.foreground": "#abb2bf",
    "editorIndentGuide.activeBackground": "#3e4451",
    "editorIndentGuide.background": "#353b45",
    "editorLineNumber.activeForeground": "#abb2bf",
    "editorLineNumber.foreground": "#545862",
    "editorWhitespace.foreground": "#545862",
    "scrollbar.shadow": "#282c34",
    "scrollbarSlider.activeBackground": "#545862",
    "scrollbarSlider.background": "#3e4451",
    "scrollbarSlider.hoverBackground": "#545862",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "abb2bf",
      "token": "",
    },
    {
      "foreground": "545862",
      "token": "comment",
    },
    {
      "foreground": "98c379",
      "token": "string",
    },
    {
      "foreground": "d19a66",
      "token": "number",
    },
    {
      "foreground": "d19a66",
      "token": "constant",
    },
    {
      "foreground": "c678dd",
      "token": "keyword",
    },
    {
      "foreground": "abb2bf",
      "token": "operator",
    },
    {
      "foreground": "abb2bf",
      "token": "delimiter",
    },
    {
      "foreground": "abb2bf",
      "token": "identifier",
    },
    {
      "foreground": "e5c07b",
      "token": "type",
    },
    {
      "foreground": "61afef",
      "token": "predefined",
    },
    {
      "foreground": "61afef",
      "token": "function",
    },
    {
      "foreground": "e06c75",
      "token": "variable",
    },
    {
      "foreground": "be5046",
      "token": "invalid",
    },
    {
      "foreground": "98c379",
      "token": "string.sql",
    },
    {
      "foreground": "61afef",
      "token": "predefined.sql",
    },
    {
      "foreground": "c678dd",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "abb2bf",
      "token": "identifier.sql",
    },
    {
      "foreground": "e5c07b",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "56b6c2",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Outrun Dark palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#00002a",
    "editor.foreground": "#d0d0fa",
    "editor.lineHighlightBackground": "#20204a",
    "editor.selectionBackground": "#30305a",
    "editorCursor.foreground": "#d0d0fa",
    "editorIndentGuide.activeBackground": "#30305a",
    "editorIndentGuide.background": "#20204a",
    "editorLineNumber.activeForeground": "#d0d0fa",
    "editorLineNumber.foreground": "#50507a",
    "editorWhitespace.foreground": "#50507a",
    "scrollbar.shadow": "#00002a",
    "scrollbarSlider.activeBackground": "#50507a",
    "scrollbarSlider.background": "#30305a",
    "scrollbarSlider.hoverBackground": "#50507a",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "d0d0fa",
      "token": "",
    },
    {
      "foreground": "50507a",
      "token": "comment",
    },
    {
      "foreground": "59f176",
      "token": "string",
    },
    {
      "foreground": "fc8d28",
      "token": "number",
    },
    {
      "foreground": "fc8d28",
      "token": "constant",
    },
    {
      "foreground": "f10596",
      "token": "keyword",
    },
    {
      "foreground": "d0d0fa",
      "token": "operator",
    },
    {
      "foreground": "d0d0fa",
      "token": "delimiter",
    },
    {
      "foreground": "d0d0fa",
      "token": "identifier",
    },
    {
      "foreground": "f3e877",
      "token": "type",
    },
    {
      "foreground": "66b0ff",
      "token": "predefined",
    },
    {
      "foreground": "66b0ff",
      "token": "function",
    },
    {
      "foreground": "ff4242",
      "token": "variable",
    },
    {
      "foreground": "f003ef",
      "token": "invalid",
    },
    {
      "foreground": "59f176",
      "token": "string.sql",
    },
    {
      "foreground": "66b0ff",
      "token": "predefined.sql",
    },
    {
      "foreground": "f10596",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "d0d0fa",
      "token": "identifier.sql",
    },
    {
      "foreground": "f3e877",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "0ef0f0",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Rosé Pine Dawn palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#faf4ed",
    "editor.foreground": "#575279",
    "editor.lineHighlightBackground": "#fffaf3",
    "editor.selectionBackground": "#f2e9de",
    "editorCursor.foreground": "#575279",
    "editorIndentGuide.activeBackground": "#f2e9de",
    "editorIndentGuide.background": "#fffaf3",
    "editorLineNumber.activeForeground": "#575279",
    "editorLineNumber.foreground": "#9893a5",
    "editorWhitespace.foreground": "#9893a5",
    "scrollbar.shadow": "#faf4ed",
    "scrollbarSlider.activeBackground": "#9893a5",
    "scrollbarSlider.background": "#f2e9de",
    "scrollbarSlider.hoverBackground": "#9893a5",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "575279",
      "token": "",
    },
    {
      "foreground": "9893a5",
      "token": "comment",
    },
    {
      "foreground": "286983",
      "token": "string",
    },
    {
      "foreground": "ea9d34",
      "token": "number",
    },
    {
      "foreground": "ea9d34",
      "token": "constant",
    },
    {
      "foreground": "ea9d34",
      "token": "keyword",
    },
    {
      "foreground": "575279",
      "token": "operator",
    },
    {
      "foreground": "575279",
      "token": "delimiter",
    },
    {
      "foreground": "575279",
      "token": "identifier",
    },
    {
      "foreground": "d7827e",
      "token": "type",
    },
    {
      "foreground": "907aa9",
      "token": "predefined",
    },
    {
      "foreground": "907aa9",
      "token": "function",
    },
    {
      "foreground": "b4637a",
      "token": "variable",
    },
    {
      "foreground": "cecacd",
      "token": "invalid",
    },
    {
      "foreground": "286983",
      "token": "string.sql",
    },
    {
      "foreground": "907aa9",
      "token": "predefined.sql",
    },
    {
      "foreground": "ea9d34",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "575279",
      "token": "identifier.sql",
    },
    {
      "foreground": "d7827e",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "56949f",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Rosé Pine palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#191724",
    "editor.foreground": "#e0def4",
    "editor.lineHighlightBackground": "#1f1d2e",
    "editor.selectionBackground": "#26233a",
    "editorCursor.foreground": "#e0def4",
    "editorIndentGuide.activeBackground": "#26233a",
    "editorIndentGuide.background": "#1f1d2e",
    "editorLineNumber.activeForeground": "#e0def4",
    "editorLineNumber.foreground": "#6e6a86",
    "editorWhitespace.foreground": "#6e6a86",
    "scrollbar.shadow": "#191724",
    "scrollbarSlider.activeBackground": "#6e6a86",
    "scrollbarSlider.background": "#26233a",
    "scrollbarSlider.hoverBackground": "#6e6a86",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "e0def4",
      "token": "",
    },
    {
      "foreground": "6e6a86",
      "token": "comment",
    },
    {
      "foreground": "31748f",
      "token": "string",
    },
    {
      "foreground": "f6c177",
      "token": "number",
    },
    {
      "foreground": "f6c177",
      "token": "constant",
    },
    {
      "foreground": "f6c177",
      "token": "keyword",
    },
    {
      "foreground": "e0def4",
      "token": "operator",
    },
    {
      "foreground": "e0def4",
      "token": "delimiter",
    },
    {
      "foreground": "e0def4",
      "token": "identifier",
    },
    {
      "foreground": "ebbcba",
      "token": "type",
    },
    {
      "foreground": "c4a7e7",
      "token": "predefined",
    },
    {
      "foreground": "c4a7e7",
      "token": "function",
    },
    {
      "foreground": "eb6f92",
      "token": "variable",
    },
    {
      "foreground": "524f67",
      "token": "invalid",
    },
    {
      "foreground": "31748f",
      "token": "string.sql",
    },
    {
      "foreground": "c4a7e7",
      "token": "predefined.sql",
    },
    {
      "foreground": "f6c177",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "e0def4",
      "token": "identifier.sql",
    },
    {
      "foreground": "ebbcba",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "9ccfd8",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Solarized Dark palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#002b36",
    "editor.foreground": "#93a1a1",
    "editor.lineHighlightBackground": "#073642",
    "editor.selectionBackground": "#586e75",
    "editorCursor.foreground": "#93a1a1",
    "editorIndentGuide.activeBackground": "#586e75",
    "editorIndentGuide.background": "#073642",
    "editorLineNumber.activeForeground": "#93a1a1",
    "editorLineNumber.foreground": "#657b83",
    "editorWhitespace.foreground": "#657b83",
    "scrollbar.shadow": "#002b36",
    "scrollbarSlider.activeBackground": "#657b83",
    "scrollbarSlider.background": "#586e75",
    "scrollbarSlider.hoverBackground": "#657b83",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "93a1a1",
      "token": "",
    },
    {
      "foreground": "657b83",
      "token": "comment",
    },
    {
      "foreground": "859900",
      "token": "string",
    },
    {
      "foreground": "cb4b16",
      "token": "number",
    },
    {
      "foreground": "cb4b16",
      "token": "constant",
    },
    {
      "foreground": "6c71c4",
      "token": "keyword",
    },
    {
      "foreground": "93a1a1",
      "token": "operator",
    },
    {
      "foreground": "93a1a1",
      "token": "delimiter",
    },
    {
      "foreground": "93a1a1",
      "token": "identifier",
    },
    {
      "foreground": "b58900",
      "token": "type",
    },
    {
      "foreground": "268bd2",
      "token": "predefined",
    },
    {
      "foreground": "268bd2",
      "token": "function",
    },
    {
      "foreground": "dc322f",
      "token": "variable",
    },
    {
      "foreground": "d33682",
      "token": "invalid",
    },
    {
      "foreground": "859900",
      "token": "string.sql",
    },
    {
      "foreground": "268bd2",
      "token": "predefined.sql",
    },
    {
      "foreground": "6c71c4",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "93a1a1",
      "token": "identifier.sql",
    },
    {
      "foreground": "b58900",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "2aa198",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Solarized Light palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#fdf6e3",
    "editor.foreground": "#586e75",
    "editor.lineHighlightBackground": "#eee8d5",
    "editor.selectionBackground": "#93a1a1",
    "editorCursor.foreground": "#586e75",
    "editorIndentGuide.activeBackground": "#93a1a1",
    "editorIndentGuide.background": "#eee8d5",
    "editorLineNumber.activeForeground": "#586e75",
    "editorLineNumber.foreground": "#839496",
    "editorWhitespace.foreground": "#839496",
    "scrollbar.shadow": "#fdf6e3",
    "scrollbarSlider.activeBackground": "#839496",
    "scrollbarSlider.background": "#93a1a1",
    "scrollbarSlider.hoverBackground": "#839496",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "586e75",
      "token": "",
    },
    {
      "foreground": "839496",
      "token": "comment",
    },
    {
      "foreground": "859900",
      "token": "string",
    },
    {
      "foreground": "cb4b16",
      "token": "number",
    },
    {
      "foreground": "cb4b16",
      "token": "constant",
    },
    {
      "foreground": "6c71c4",
      "token": "keyword",
    },
    {
      "foreground": "586e75",
      "token": "operator",
    },
    {
      "foreground": "586e75",
      "token": "delimiter",
    },
    {
      "foreground": "586e75",
      "token": "identifier",
    },
    {
      "foreground": "b58900",
      "token": "type",
    },
    {
      "foreground": "268bd2",
      "token": "predefined",
    },
    {
      "foreground": "268bd2",
      "token": "function",
    },
    {
      "foreground": "dc322f",
      "token": "variable",
    },
    {
      "foreground": "d33682",
      "token": "invalid",
    },
    {
      "foreground": "859900",
      "token": "string.sql",
    },
    {
      "foreground": "268bd2",
      "token": "predefined.sql",
    },
    {
      "foreground": "6c71c4",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "586e75",
      "token": "identifier.sql",
    },
    {
      "foreground": "b58900",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "2aa198",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Synth Midnight palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#050608",
    "editor.foreground": "#c1c3c4",
    "editor.lineHighlightBackground": "#1a1b1c",
    "editor.selectionBackground": "#28292a",
    "editorCursor.foreground": "#c1c3c4",
    "editorIndentGuide.activeBackground": "#28292a",
    "editorIndentGuide.background": "#1a1b1c",
    "editorLineNumber.activeForeground": "#c1c3c4",
    "editorLineNumber.foreground": "#474849",
    "editorWhitespace.foreground": "#474849",
    "scrollbar.shadow": "#050608",
    "scrollbarSlider.activeBackground": "#474849",
    "scrollbarSlider.background": "#28292a",
    "scrollbarSlider.hoverBackground": "#474849",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "c1c3c4",
      "token": "",
    },
    {
      "foreground": "474849",
      "token": "comment",
    },
    {
      "foreground": "06ea61",
      "token": "string",
    },
    {
      "foreground": "ea770d",
      "token": "number",
    },
    {
      "foreground": "ea770d",
      "token": "constant",
    },
    {
      "foreground": "ea5ce2",
      "token": "keyword",
    },
    {
      "foreground": "c1c3c4",
      "token": "operator",
    },
    {
      "foreground": "c1c3c4",
      "token": "delimiter",
    },
    {
      "foreground": "c1c3c4",
      "token": "identifier",
    },
    {
      "foreground": "c9d364",
      "token": "type",
    },
    {
      "foreground": "03aeff",
      "token": "predefined",
    },
    {
      "foreground": "03aeff",
      "token": "function",
    },
    {
      "foreground": "b53b50",
      "token": "variable",
    },
    {
      "foreground": "cd6320",
      "token": "invalid",
    },
    {
      "foreground": "06ea61",
      "token": "string.sql",
    },
    {
      "foreground": "03aeff",
      "token": "predefined.sql",
    },
    {
      "foreground": "ea5ce2",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "c1c3c4",
      "token": "identifier.sql",
    },
    {
      "foreground": "c9d364",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "42fff9",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the SynthWave '84 palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#262335",
    "editor.foreground": "#ffffff",
    "editor.lineHighlightBackground": "#241b2f",
    "editor.selectionBackground": "#463465",
    "editorCursor.foreground": "#ffffff",
    "editorIndentGuide.activeBackground": "#463465",
    "editorIndentGuide.background": "#241b2f",
    "editorLineNumber.activeForeground": "#ffffff",
    "editorLineNumber.foreground": "#848bbd",
    "editorWhitespace.foreground": "#848bbd",
    "scrollbar.shadow": "#262335",
    "scrollbarSlider.activeBackground": "#848bbd",
    "scrollbarSlider.background": "#463465",
    "scrollbarSlider.hoverBackground": "#848bbd",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "ffffff",
      "token": "",
    },
    {
      "foreground": "848bbd",
      "token": "comment",
    },
    {
      "foreground": "ff8b39",
      "token": "string",
    },
    {
      "foreground": "f97e72",
      "token": "number",
    },
    {
      "foreground": "f97e72",
      "token": "constant",
    },
    {
      "foreground": "fede5d",
      "token": "keyword",
    },
    {
      "foreground": "ffffff",
      "token": "operator",
    },
    {
      "foreground": "ffffff",
      "token": "delimiter",
    },
    {
      "foreground": "ffffff",
      "token": "identifier",
    },
    {
      "foreground": "fe4450",
      "token": "type",
    },
    {
      "foreground": "36f9f6",
      "token": "predefined",
    },
    {
      "foreground": "36f9f6",
      "token": "function",
    },
    {
      "foreground": "ff7edb",
      "token": "variable",
    },
    {
      "foreground": "2ee2fa",
      "token": "invalid",
    },
    {
      "foreground": "ff8b39",
      "token": "string.sql",
    },
    {
      "foreground": "36f9f6",
      "token": "predefined.sql",
    },
    {
      "foreground": "fede5d",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "ffffff",
      "token": "identifier.sql",
    },
    {
      "foreground": "fe4450",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "72f1b8",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Tokyo Night Dark palette 1`] = `
{
  "base": "vs-dark",
  "colors": {
    "editor.background": "#1a1b26",
    "editor.foreground": "#a9b1d6",
    "editor.lineHighlightBackground": "#16161e",
    "editor.selectionBackground": "#2f3549",
    "editorCursor.foreground": "#a9b1d6",
    "editorIndentGuide.activeBackground": "#2f3549",
    "editorIndentGuide.background": "#16161e",
    "editorLineNumber.activeForeground": "#a9b1d6",
    "editorLineNumber.foreground": "#444b6a",
    "editorWhitespace.foreground": "#444b6a",
    "scrollbar.shadow": "#1a1b26",
    "scrollbarSlider.activeBackground": "#444b6a",
    "scrollbarSlider.background": "#2f3549",
    "scrollbarSlider.hoverBackground": "#444b6a",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "a9b1d6",
      "token": "",
    },
    {
      "foreground": "444b6a",
      "token": "comment",
    },
    {
      "foreground": "9ece6a",
      "token": "string",
    },
    {
      "foreground": "a9b1d6",
      "token": "number",
    },
    {
      "foreground": "a9b1d6",
      "token": "constant",
    },
    {
      "foreground": "bb9af7",
      "token": "keyword",
    },
    {
      "foreground": "a9b1d6",
      "token": "operator",
    },
    {
      "foreground": "a9b1d6",
      "token": "delimiter",
    },
    {
      "foreground": "a9b1d6",
      "token": "identifier",
    },
    {
      "foreground": "0db9d7",
      "token": "type",
    },
    {
      "foreground": "2ac3de",
      "token": "predefined",
    },
    {
      "foreground": "2ac3de",
      "token": "function",
    },
    {
      "foreground": "c0caf5",
      "token": "variable",
    },
    {
      "foreground": "f7768e",
      "token": "invalid",
    },
    {
      "foreground": "9ece6a",
      "token": "string.sql",
    },
    {
      "foreground": "2ac3de",
      "token": "predefined.sql",
    },
    {
      "foreground": "bb9af7",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "a9b1d6",
      "token": "identifier.sql",
    },
    {
      "foreground": "0db9d7",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "b4f9f8",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Tokyo Night Light palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#d5d6db",
    "editor.foreground": "#343b59",
    "editor.lineHighlightBackground": "#cbccd1",
    "editor.selectionBackground": "#dfe0e5",
    "editorCursor.foreground": "#343b59",
    "editorIndentGuide.activeBackground": "#dfe0e5",
    "editorIndentGuide.background": "#cbccd1",
    "editorLineNumber.activeForeground": "#343b59",
    "editorLineNumber.foreground": "#9699a3",
    "editorWhitespace.foreground": "#9699a3",
    "scrollbar.shadow": "#d5d6db",
    "scrollbarSlider.activeBackground": "#9699a3",
    "scrollbarSlider.background": "#dfe0e5",
    "scrollbarSlider.hoverBackground": "#9699a3",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "343b59",
      "token": "",
    },
    {
      "foreground": "9699a3",
      "token": "comment",
    },
    {
      "foreground": "485e30",
      "token": "string",
    },
    {
      "foreground": "965027",
      "token": "number",
    },
    {
      "foreground": "965027",
      "token": "constant",
    },
    {
      "foreground": "5a4a78",
      "token": "keyword",
    },
    {
      "foreground": "343b59",
      "token": "operator",
    },
    {
      "foreground": "343b59",
      "token": "delimiter",
    },
    {
      "foreground": "343b59",
      "token": "identifier",
    },
    {
      "foreground": "166775",
      "token": "type",
    },
    {
      "foreground": "34548a",
      "token": "predefined",
    },
    {
      "foreground": "34548a",
      "token": "function",
    },
    {
      "foreground": "343b58",
      "token": "variable",
    },
    {
      "foreground": "8c4351",
      "token": "invalid",
    },
    {
      "foreground": "485e30",
      "token": "string.sql",
    },
    {
      "foreground": "34548a",
      "token": "predefined.sql",
    },
    {
      "foreground": "5a4a78",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "343b59",
      "token": "identifier.sql",
    },
    {
      "foreground": "166775",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "3e6968",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Unikitty Light palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#ffffff",
    "editor.foreground": "#6c696e",
    "editor.lineHighlightBackground": "#e1e1e2",
    "editor.selectionBackground": "#c4c3c5",
    "editorCursor.foreground": "#6c696e",
    "editorIndentGuide.activeBackground": "#c4c3c5",
    "editorIndentGuide.background": "#e1e1e2",
    "editorLineNumber.activeForeground": "#6c696e",
    "editorLineNumber.foreground": "#a7a5a8",
    "editorWhitespace.foreground": "#a7a5a8",
    "scrollbar.shadow": "#ffffff",
    "scrollbarSlider.activeBackground": "#a7a5a8",
    "scrollbarSlider.background": "#c4c3c5",
    "scrollbarSlider.hoverBackground": "#a7a5a8",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "6c696e",
      "token": "",
    },
    {
      "foreground": "a7a5a8",
      "token": "comment",
    },
    {
      "foreground": "17ad98",
      "token": "string",
    },
    {
      "foreground": "d65407",
      "token": "number",
    },
    {
      "foreground": "d65407",
      "token": "constant",
    },
    {
      "foreground": "aa17e6",
      "token": "keyword",
    },
    {
      "foreground": "6c696e",
      "token": "operator",
    },
    {
      "foreground": "6c696e",
      "token": "delimiter",
    },
    {
      "foreground": "6c696e",
      "token": "identifier",
    },
    {
      "foreground": "dc8a0e",
      "token": "type",
    },
    {
      "foreground": "775dff",
      "token": "predefined",
    },
    {
      "foreground": "775dff",
      "token": "function",
    },
    {
      "foreground": "d8137f",
      "token": "variable",
    },
    {
      "foreground": "e013d0",
      "token": "invalid",
    },
    {
      "foreground": "17ad98",
      "token": "string.sql",
    },
    {
      "foreground": "775dff",
      "token": "predefined.sql",
    },
    {
      "foreground": "aa17e6",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "6c696e",
      "token": "identifier.sql",
    },
    {
      "foreground": "dc8a0e",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "149bda",
      "token": "alias.sql",
    },
  ],
}
`;

exports[`buildMonacoTheme > should build a Monaco theme from the Visual Studio palette 1`] = `
{
  "base": "vs",
  "colors": {
    "editor.background": "#ffffff",
    "editor.foreground": "#000000",
    "editor.lineHighlightBackground": "#f3f3f3",
    "editor.selectionBackground": "#add6ff",
    "editorCursor.foreground": "#000000",
    "editorIndentGuide.activeBackground": "#add6ff",
    "editorIndentGuide.background": "#f3f3f3",
    "editorLineNumber.activeForeground": "#000000",
    "editorLineNumber.foreground": "#008000",
    "editorWhitespace.foreground": "#008000",
    "scrollbar.shadow": "#ffffff",
    "scrollbarSlider.activeBackground": "#008000",
    "scrollbarSlider.background": "#add6ff",
    "scrollbarSlider.hoverBackground": "#008000",
  },
  "inherit": true,
  "rules": [
    {
      "foreground": "000000",
      "token": "",
    },
    {
      "foreground": "008000",
      "token": "comment",
    },
    {
      "foreground": "a31515",
      "token": "string",
    },
    {
      "foreground": "098658",
      "token": "number",
    },
    {
      "foreground": "098658",
      "token": "constant",
    },
    {
      "foreground": "0000ff",
      "token": "keyword",
    },
    {
      "foreground": "000000",
      "token": "operator",
    },
    {
      "foreground": "000000",
      "token": "delimiter",
    },
    {
      "foreground": "000000",
      "token": "identifier",
    },
    {
      "foreground": "2b91af",
      "token": "type",
    },
    {
      "foreground": "795e26",
      "token": "predefined",
    },
    {
      "foreground": "795e26",
      "token": "function",
    },
    {
      "foreground": "001080",
      "token": "variable",
    },
    {
      "foreground": "cd3131",
      "token": "invalid",
    },
    {
      "foreground": "a31515",
      "token": "string.sql",
    },
    {
      "foreground": "795e26",
      "token": "predefined.sql",
    },
    {
      "foreground": "0000ff",
      "token": "operator.keyword.sql",
    },
    {
      "foreground": "000000",
      "token": "identifier.sql",
    },
    {
      "foreground": "2b91af",
      "token": "table.sql",
    },
    {
      "fontStyle": "italic",
      "foreground": "0451a5",
      "token": "alias.sql",
    },
  ],
}
`;
